# PyNikonSciCam

./: .gitignore  README.md  main.py  pyproject.toml  simple_example.py
PyNikonSciCam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pynikonscicam/: __init__.py  camera_class_nikon.py  commands.py  constants.py  error_codes.py  methods.py  structures.py
